fixed spacing again

--- a/StyleSheet.css
+++ b/StyleSheet.css
@@ -122,7 +122,7 @@ h1 {
 
 /* general header, centered paragraph, left-side paragraph, unorganized list, and invite button styling */
 .header {
-    width: 50%; 
+    width: 75%; 
     margin-left: auto; 
     margin-right: auto;
     color: #f8e9c2;
